# h2compact

./: LICENSE.txt  README.md  batch_demo.sh  camera_publish.py  data_utils.py  dataset.py  demo.py  g1_walk.py  main.py  main.sh  stoch_transformer.py  sync_save_bag.py  test.sh  transformer.py
ati_sensor/: CMakeLists.txt  README.md  package.xml
ati_sensor/launch/: ati_dual_sensors.launch  ati_ros.launch  vicon.launch
ati_sensor/src/: ati_ros.cpp  ati_sensor.cpp  ati_zero_offset.py  jsd_test_utils.cpp
checkpoints/: stoch_transformer_model_best.pt  transformer_model_best.pt
ros/: action_pub.py  force_sub.py  force_to_action.py
